# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.25.3
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Introduce eix-drop-permissions and use it for eix-remote
	  instead of su/sudo hacks.
	- Fix regressions: eix-remote add|fetch without temporary file,
	  and eix-remote update with temporary file.

*eix-0.25.2
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Introduce EIX_PREVIOUS as default for eix-diff; remove eix-sync -d.
	- Introduce EIX_REMOTEARCHIVE; remove filename handling of eix-remote.
	- eix-remote: Pass more variables to new user.
	- Update docu to new paths and magic string (forgotten in eix-0.25.1)

*eix-0.25.1
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Drop all permission stuff: Only become EIX_{USER,GROUP,UID,GID} ASAP.
	  This fixes several security issues and simplifies code enormously.
	- Let DEP work with sqlite cache method (bug in eix-0.25.0).
	- Update zsh completion (including missing changes from eix-0.25.0).
	- Move all cache files into /var/cache/eix/
	- Start cachefile with magic string "eix\n"
	- Introduce EXIT_STATUSLINE, see the discussion in
	  http://bugs.gentoo.org/show_bug.cgi?id=407473

*eix-0.25.0
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Add DEP (and ./configure option --with-dep-default for the default)
	  to support DEPEND, RDEPEND, PDEPEND ({r,p,}depend{,*} properties).
	  By new default, the output happens with "eix -lv" (or "eix -lvx")
	  if DEP=true and the cachefile was generated with DEP=true.
	  Set VERSION_DEPS_NORMAL=true if you want output also with "eix -l".
	  Usage of DEP=true roughly doubles disk resp. memory requirements.
	- New match-fields --depend --rdepend --pdepend (and --deps for
	  all three). This requires DEP=true (also for cachefile generation).
	- Output dependencies also to xml (if DEP=true), bump xml version.
	- Fix xml-schema (e.g. mask can be repeated).
	- Change defaults (VERSION_KEYWORDS_NORMAL=false, PRINT_BUGS=true).