@@ -27,7 +27,7 @@ Available options are
   -Y  Use -std=gnu++0x
   -jX Use -jX (currently ${jarg})
   -c OPT Add OPT to ./configure
-  -Q  Do not --enable-quickcheck
+  -f  With --enable-quickcheck
   -d  With --enable-debugging
   -O  Pass --enable-strong-optimization --enable-security
   -r  Change also directory permissions to root (for fakeroot-ng)"
@@ -84,13 +84,13 @@ jarg='-j3'
 use_ccache=:
 configure_extra='--prefix=/usr --sysconfdir=/etc'
 optimization=false
-quickcheck=:
+quickcheck=false
 clear_ccache=false
 stdcxx=''
 debugging=false
 wnosign=false
 OPTIND=1
-while getopts 'q01234dnepPsSrOQCXyYdc:j:hH?' opt
+while getopts 'q01234dnepPsSrOfCXyYdc:j:hH?' opt
 do	case ${opt} in
 	q) quiet=:;;
 	0) separate_all=false;;
@@ -107,7 +107,7 @@ do	case ${opt} in
 	S) configure_extra="${configure_extra} --without-sqlite";;
 	r) use_chown=:;;
 	O) optimization=:;;
-	Q) quickcheck=false;;
+	f) quickcheck=:;;
 	C) use_ccache=false;;
 	X) clear_ccache=:;;
 	y) stdcxx='-std=c++0x';;
